# logana

./: .editorconfig  .gitignore  .logana-report  Cargo.toml  README.md  _typos.toml  default.nix  flake.nix  justfile  result  rust-toolchain.toml
src/: config.rs  file.rs  input.rs  lib.rs  log.rs  logvec.rs  main.rs  output.rs  types.rs
src/analyser/: alire.rs  angular.rs  biome.rs  cargo.rs  clang.rs  dune.rs  eslint.rs  gcc.rs  go.rs  gradle.rs  java.rs  karma_jasmine.rs  maven.rs  mod.rs  nix.rs  odin.rs  v.rs  zig.rs
src/core/: config.rs  mod.rs  output.rs  types.rs
src/input/: command.rs  handle.rs  mod.rs  split.rs  tmux.rs  wezterm.rs
src/loader/: command.rs  fetch.rs  mod.rs  split.rs  tmux.rs  wezterm.rs
