[package]
name = "logana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tmux_interface = "0.2.1"
subprocess = "0.2.9"
regex = "1"
lazy_static = "1.4"
clearscreen = "1.0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"
chrono = "0.4.23"

[dev-dependencies]
pretty_assertions = "1.3.0"
