[package]
name = "logana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tmux_interface = "0.3"
subprocess = "0.2.9"
regex = "1"
lazy_static = "1.4"
clearscreen = "3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4"}
notify = "6"
itertools = "0.13.0"

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
